# holyBPF-rust

./: .gitignore  ARCHITECTURE.md  BUILD_VALIDATION.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_PLAN.md  DOCUMENTATION_IMPROVEMENTS.md  Gemfile  IMPLEMENTATION.md  LICENSE  README.md  ROADMAP.md  SOLANA_BPF.md  STATUS.md  _config.yml  build.zig  build.zig.zon  build_analyzer.sh  build_validator.sh  index.md  manifest.json  preview.html  recursive_build_fixer.sh  sw.js  test-markdown.md
.github/: copilot-instructions.md
.github/workflows/: build-bpf.yml  pages.yml  rust-ci.yml  validate.yml
_layouts/: default.html  doc.html
advanced/: cpi.md  index.md
api/: index.md  stdlib.md
assets/css/: style.css
assets/js/: main.js
docs/: DOCUMENTATION.md  README.md  SOLANA_BPF_TESTING.md
docs/advanced/: cpi.md
docs/api/: stdlib.md
docs/examples/: snippets.md
docs/getting-started/: quick-start.md
docs/language-reference/: holyc-solana.md
docs/programs/: ai-agents.md  amm.md  cross-chain-bridge.md  dao-governance.md  escrow.md  flash-loans.md  gaming-protocol.md  hello-world.md  lending.md  nft-marketplace.md  orderbook.md  prediction-markets.md  privacy-voting.md  (+4 more)
examples/: index.md  snippets.md
getting-started/: index.md  quick-start.md
language-reference/: holyc-solana.md  index.md
programs/: amm.md  index.md  lending.md  orderbook.md  prediction-markets.md
src/: lib.rs  main.rs  main.zig  tests.rs
tests/: codegen_test.zig  compiler_test.zig  integration_test.zig  lexer_test.zig  main.zig  parser_test.zig  solana_bpf_test.zig  test_lexer.zig
(+106 files in other folders)
